# prog-fine-2019

./: .gitignore  .gitmodules  Benchmark.cpp  Benchmark.h  CMakeLists.txt  Generator.h  Tris.h  benchmarkresult.csv  benchmarkresult.json  benchmarkresult2.csv  benchmarkresult2.json  main.cpp  notebook_analysis.ipynb
TP1 C++/: CMakeLists.txt  README.md  Tris.h  benchmarkresult copie.csv  main.cpp  notebook_analysis.ipynb
TP2_node_js/: .gitignore  package-lock.json  package.json  tsconfig.json
TP2_node_js/src/: BenchDataStructure.ts  Benchmark.ts  index.ts  test.ts
TP2_node_js/src/AVL/: AvlTree.ts
TP2_node_js/src/Heap/: MinHeap.ts
TP2_node_js/src/structures/: BenchDataStructure.ts  Stack.ts
TP2_node_js/src/structures/custom/Heap/: MinHeap.ts
TP2_node_js/src/structures/custom/List/: List.ts
TP2_node_js/src/structures/immutable/: AVL.ts  Array.ts  Heap.ts  Queue.ts  Stack.ts
TP2_node_js/src/structures/mutable/: AVL.ts  Array.ts  Heap.ts  Queue.ts  Stack.ts
TP2_node_js/src/utils/: Benchmark.ts  CsvGenerator.ts  Generator.ts  Result.ts  Timer.ts
TP3 C++ /: .gitignore  CMakeLists.txt  External.cmake.in  informations.md  score.py
TP3 C++ /files/: CP16.ans  CP16.txt.output  DG20.ans  DG20.txt  DG20.txt.output  GC16.txt  GC16.txt.output  GG16.ans  TG16.ans  TG16.txt  TG16.txt.output  TR36.ans  TR36.txt.output  sample.ans  sample.txt  sample.txt.output
TP3 C++ /files/minTabu/: CP16.txt.output  GC16.txt.output  TG16.txt.output  TR36.txt.output  sample.txt.output
TP3 C++ /include/Graph/: README.MD
TP3 C++ /lemon-1.3.1/lemon/: CMakeLists.txt
TP3 C++ /libs/: README.MD
TP3 C++ /src/: main.cpp
TP3 C++ /src/Algorithm/: Algorithm.cpp  Algorithm.h
TP3 C++ /src/Algorithm/model/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
TP3 C++ /src/Algorithm/strategies/: Algorithm.cpp  Algorithm.h  AlgorithmGreedy.cpp  AlgorithmGreedy.h  AlgorithmQuadra.cpp  AlgorithmQuadra.h  AlgorithmTabu.cpp  AlgorithmTabu.h
TP3 C++ /test/: README.MD
