cmake_minimum_required(VERSION 3.14)
project(ProgFine)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
ADD_SUBDIRECTORY(benchmark ${benchmark_BINARY_DIR})
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.7.0)

if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(ProgFine main.cpp Tris.h Generator.h Benchmark.cpp Benchmark.h)
    target_link_libraries(ProgFine PRIVATE benchmark benchmark ${Boost_LIBRARIES})
endif ()